pkg/lang/testdata/ub/configurations/invalid/duplicate-name.ub
configurations: {
  aws: {
    default: { region: 'a' }
    default: { region: 'b' }
  }
}
